--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src", //para no tener que usar paths relativos
     "target": "es5",
     "lib": [
       "dom",
@@ -18,7 +19,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",    
+    // "paths": {
+    //   "~/*": ["./src/*"],
+    // },
   },
   "include": [
     "src"
